--- a/learn-PR/develop-voice-live-agent/index.yml
+++ b/learn-PR/develop-voice-live-agent/index.yml
@@ -1,26 +1,15 @@
 ### YamlMime:Module
 uid: learn.wwl.develop-voice-live-agent
 metadata:
-  title: Develop a Voice Live agent
-  description: "TODO this field is for search engine optimization and is not user-visible; use 2-3 complete, grammatically correct sentences to describe the module; include relevant search keywords."
+  title: Develop an Azure AI Voice Live Agent
+  description: "Learn how to develop an Azure AI Voice Live Agent using the Voice Live API and SDK."
   ms.date: 10/7/2025
   author: jeffkoms
   ms.author: jeffko
-  ms.topic: module-standard-task-based # Please don't edit, used for our analytics
-###########################################################################
-###
-### If your content is related to a product or service, apply one value from the either the ms.prod allowlist
-### or the ms.service allowlist. You can’t use both ms.prod and ms.service.
-###
-### If your content isn't about a product or service, you can omit both ms.prod and ms.service.
-###
-### The list of approved ms.prod values is here: https://review.learn.microsoft.com/help/platform/metadata-taxonomies?branch=main#msprod
-### The list of approved ms.service values is here: https://review.learn.microsoft.com/help/platform/metadata-taxonomies?branch=main#msservice
-### If you need to request new values, follow the process here: https://review.learn.microsoft.com/en-us/help/platform/metadata-allowlist-requests?branch=main
-  ms.prod: TODO
-  ms.service: TODO
-title: Develop a Voice Live agent
-summary: "TODO 2 sentences, 20-35 words, don't teach or motivate, avoid using 'learn', don't duplicate the title; see https://review.docs.microsoft.com/help/learn/id-guidance-introductory-summaries?branch=main"
+  ms.topic: module-standard-task-based
+  ms.service: azure-ai-speech
+title: Develop an Azure AI Voice Live Agent
+summary: "This module covers the development of an Azure AI Voice Live Agent using the Voice Live API and SDK."
 abstract: |
   By the end of this module, you'll be able to:
     - "TODO learning objective 1"
@@ -31,21 +20,21 @@ prerequisites: |
   - "TODO prerequisite 2"
   - "TODO prerequisite 3 (if needed; see https://review.docs.microsoft.com/help/learn/id-guidance-prerequisites?branch=main"
 iconUrl: /learn/achievements/generic-badge.svg
-levels: # see level taxonomy https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=main#level
-  - TODO
-roles: # see role taxonomy https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=main#role
-  - TODO
-products: # see product taxonomy https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=main#product
-- azure
-subjects: # see subject taxonomy https://review.docs.microsoft.com/help/contribute/metadata-taxonomies?branch=main#subject
-  - TODO
+levels: 
+  - intermediate
+roles: 
+  - developer
+products: 
+- azure-ai-foundry
+- ai-services
+subjects: 
+  - artificial-intelligence
 units:
-- learn.wwl.develop-voice-live-agen.introduction
-- learn.wwl.develop-voice-live-agen.learning-content
-- learn.wwl.develop-voice-live-agen.exercise
-- learn.wwl.develop-voice-live-agen.learning-content
-- learn.wwl.develop-voice-live-agen.exercise
-- learn.wwl.develop-voice-live-agen.knowledge-check
-- learn.wwl.develop-voice-live-agen.summary
+- learn.wwl.develop-voice-live-agent.introduction
+- learn.wwl.develop-voice-live-agent.voice-live-api
+- learn.wwl.develop-voice-live-agent.voice-live-sdk
+- learn.wwl.develop-voice-live-agent.exercise-develop-agent
+- learn.wwl.develop-voice-live-agent.module-assessment
+- learn.wwl.develop-voice-live-agent.summary
 badge:
   uid: learn.wwl.develop-voice-live-agent.badge
