--- a/learn-PR/template/index.yml
+++ b/learn-PR/template/index.yml
@@ -7,6 +7,7 @@ metadata:
   author: jeffkoms
   ms.author: jeffko
   ms.topic: module-standard-task-based
+  ai-usage: ai-assisted
   ms.service: azure-ai-speech
 title: Develop an Azure AI Voice Live Agent
 summary: "Learn how to develop an Azure AI Voice Live agent using the Voice Live API and SDK."
