--- a/learn-PR/develop-voice-live-agent/5-module-assessment.yml
+++ b/learn-PR/develop-voice-live-agent/5-module-assessment.yml
@@ -1,5 +1,5 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.develop-voice-live-agen.module-assessment
+uid: learn.wwl.develop-voice-live-agent.module-assessment
 title: Module assessment
 metadata:
   title: Module Assessment
