--- a/learn-PR/develop-voice-live-agent/3-voice-live-sdk.yml
+++ b/learn-PR/develop-voice-live-agent/3-voice-live-sdk.yml
@@ -1,14 +1,14 @@
 ### YamlMime:ModuleUnit
 uid: learn.wwl.develop-voice-live-agent.voice-live-sdk
-title: Explore the Voice Live SDK
+title: Explore the AI Voice Live client library for Python
 metadata:
-  title: Explore the Voice Live SDK
-  description: Explore the Voice Live SDK
+  title: Explore the AI Voice Live Client Library for Python
+  description: Explore the AI Voice Live client library for Python
   ms.date: 10/7/2025
   author: jeffkoms
   ms.author: jeffko
   ms.topic: unit
 azureSandbox: false
-durationInMinutes: 1
+durationInMinutes: 5
 content: |
   [!include[](includes/3-voice-live-sdk.md)]
