--- a/learn-PR/develop-voice-live-agent/5-knowledge-check.yml
+++ b/learn-PR/develop-voice-live-agent/5-knowledge-check.yml
@@ -1,5 +1,6 @@
 ### YamlMime:ModuleUnit
-uid: learn.wwl.develop-voice-live-agent.module-assessment
+uid: learn.wwl.develop-voice-live-agent.knowledge-check
+
 title: Module assessment
 metadata:
   title: Module Assessment
