--- a/learn-PR/develop-voice-live-agent/index.yml
+++ b/learn-PR/develop-voice-live-agent/index.yml
@@ -13,9 +13,10 @@ title: Develop an Azure AI Voice Live Agent
 summary: "Learn how to develop an Azure AI Voice Live agent using the Voice Live API and SDK. This module covers the fundamentals of the Voice Live platform, including API integration, SDK usage, and building conversational AI agents."
 abstract: |
   After completing this module, you'll be able to: 
-    - "TODO learning objective 1"
-    - "TODO learning objective 2"
-    - "TODO learning objective 3"
+    - "Implement the Azure AI Voice Live API to enable real-time, bidirectional communication."
+    - "Set up and configure the agent session."
+    - "Develop and manage event handlers to create dynamic and interactive user experiences."
+    - "Build and deploy a Python-based web app with real-time voice interaction capabilities to Azure."
 prerequisites: |
   Before beginning this module, you should have:
   - "Programming experience with languages such as Python, JavaScript, or C#."
@@ -36,7 +37,7 @@ units:
 - learn.wwl.develop-voice-live-agent.voice-live-api
 - learn.wwl.develop-voice-live-agent.voice-live-sdk
 - learn.wwl.develop-voice-live-agent.exercise-develop-agent
-- learn.wwl.develop-voice-live-agent.module-assessment
+- learn.wwl.develop-voice-live-agent.knowledge-check
 - learn.wwl.develop-voice-live-agent.summary
 badge:
   uid: learn.wwl.develop-voice-live-agent.badge
