--- a/learn-PR/develop-voice-live-agent/5-knowledge-check.yml
+++ b/learn-PR/develop-voice-live-agent/5-knowledge-check.yml
@@ -14,58 +14,58 @@ durationInMinutes: 5
 content: |
 quiz:
   questions:
-  - content: ""
+  - content: "What are the two authentication methods supported by the Voice Live API?"
     choices:
-    - content: ""
+    - content: "OAuth 2.0 and JWT (JSON Web Tokens)"
+      isCorrect: false
+      explanation: "OAuth 2.0 and JWT tokens aren't supported authentication methods for the Voice Live API."
+    - content: "Basic authentication and API keys"
+      isCorrect: false
+      explanation: "API keys are supported, but basic authentication isn't a supported authentication method for the Voice Live API."
+    - content: "Microsoft Entra (keyless) and API key"
       isCorrect: true
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "Microsoft Entra (keyless) and API key are both supported authentication methods for the Voice Live API."
+  - content: "Which scope is required when generating a token for Microsoft Entra authentication?"
     choices:
-    - content: ""
+    - content: "https://cognitiveservices.azure.com/.default"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "The scope `https://cognitiveservices.azure.com/.default`, or `https://ai.azure.com/.default`, is required for Microsoft Entra authentication."
+    - content: "https://management.azure.com/.default"
       isCorrect: false
-      explanation: ""
-    - content: ""
+      explanation: "This is the Azure Resource Manager scope, not for AI services"
+    - content: "https://graph.microsoft.com/.default"
       isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "This is the Microsoft Graph API scope, not for AI services"
+  - content: "Which protocol is used for avatar streaming integration in Voice Live API?"
     choices:
-    - content: ""
+    - content: "HTTP/2"
+      isCorrect: false
+      explanation: "HTTP/2 is used for standard web communication."
+    - content: "WebRTC"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "The Voice live API supports WebRTC-based avatar streaming for interactive applications"
+    - content: "gRPC"
       isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "gRPC is used to enable communication between microservices by using HTTP/2."
+  - content: "Which event should be handled to stop audio playback when a user interrupts the voice agent?"
     choices:
-    - content: ""
+    - content: "ServerEventType.RESPONSE_AUDIO_DELTA"
+      isCorrect: false
+      explanation: "This event is for receiving audio chunks to play, not for stopping playback"
+    - content: "ServerEventType.INPUT_AUDIO_BUFFER_SPEECH_STARTED"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "This event can be used to stop audio playback, and cancel any current response."
+    - content: "ServerEventType.SESSION_UPDATED"
       isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
-  - content: ""
+      explanation: "This event indicates session readiness, not user speech interruption."
+  - content: "What is the recommended authentication method for production applications using the SDK?"
     choices:
-    - content: ""
+    - content: " API key authentication"
+      isCorrect: false
+      explanation: "API key authentication isn't recommended for production applications."
+    - content: "Microsoft Entra authentication with DefaultAzureCredential"
       isCorrect: true
-      explanation: ""
-    - content: ""
+      explanation: "Microsoft Entra authentication with DefaultAzureCredential is the recommended approach for production applications."
+    - content: "Basic username/password authentication"
       isCorrect: false
-      explanation: ""
-    - content: ""
-      isCorrect: false
-      explanation: ""
+      explanation: "Basic username/password authentication isn't a supported authentication method."
