--- a/learn-PR/module-01-implement-caching-with-azure-managed-redis/yml/01-introduction.yml
+++ b/learn-PR/module-01-implement-caching-with-azure-managed-redis/yml/01-introduction.yml
@@ -10,4 +10,4 @@ metadata:
 title: Introduction
 durationInMinutes: 5
 content: |
-  [!include[](includes/1-introduction.md)]
+  [!include[](includes/01-introduction.md)]
