--- a/learn-PR/integrate-apps-azure-managed-redis/index.yml
+++ b/learn-PR/integrate-apps-azure-managed-redis/index.yml
@@ -1,16 +1,16 @@
 ### YamlMime:Module
-uid: learn.wwl.develop-voice-live-agent
+uid: learn.wwl.integrate-apps-azure-managed-redis
 metadata:
-  title: Develop an Azure AI Voice Live Agent
-  description: "Learn how to develop an Azure AI Voice Live Agent using the Voice Live API and SDK."
+  title: Integrated Apps With Azure Managed Redis
+  description: "Learn how to integrate applications with Azure Managed Redis."
   ms.date: 10/7/2025
   author: jeffkoms
   ms.author: jeffko
   ms.topic: module-standard-task-based
   ai-usage: ai-assisted
-  ms.service: azure-ai-speech
-title: Develop an Azure AI Voice Live Agent
-summary: "Learn how to develop an Azure AI Voice Live agent using the Voice Live API and SDK."
+  ms.service: azure-managed-redis
+title: Integrated apps with Azure Managed Redis
+summary: "Learn how to integrate applications with Azure Managed Redis."
 abstract: |
   After completing this module, you'll be able to: 
     - "TODO learning objective 1"
@@ -33,10 +33,10 @@ subjects:
   - artificial-intelligence
 units:
 - learn.wwl.develop-voice-live-agent.introduction
-- learn.wwl.develop-voice-live-agent.voice-live-api
+- learn.wwl.develop-voice-live-agen.explore-azure-managed-redis
 - learn.wwl.develop-voice-live-agent.voice-live-sdk
 - learn.wwl.develop-voice-live-agent.exercise-develop-agent
-- learn.wwl.develop-voice-live-agent.module-assessment
+- learn.wwl.develop-voice-live-agen.module-assessment
 - learn.wwl.develop-voice-live-agent.summary
 badge:
   uid: learn.wwl.develop-voice-live-agent.badge
