--- a/learn-PR/integrate-apps-azure-managed-redis/index.yml
+++ b/learn-PR/integrate-apps-azure-managed-redis/index.yml
@@ -2,41 +2,40 @@
 uid: learn.wwl.integrate-apps-azure-managed-redis
 metadata:
   title: Integrate Apps With Azure Managed Redis
-  description: "Learn how to integrate applications with Azure Managed Redis."
-  ms.date: 10/7/2025
+  description: Learn how to integrate applications with Azure Managed Redis.
+  ms.date: 11/28/2025
   author: jeffkoms
   ms.author: jeffko
   ms.topic: module-standard-task-based
   ai-usage: ai-assisted
   ms.service: azure-managed-redis
 title: Integrate apps with Azure Managed Redis
-summary: "Learn how to integrate applications with Azure Managed Redis."
+summary: Learn how to integrate applications with Azure Managed Redis.
 abstract: |
   After completing this module, you'll be able to: 
-    - "TODO learning objective 1"
-    - "TODO learning objective 2"
-    - "TODO learning objective 3"
+    - TODO learning objective 1
+    - TODO learning objective 2
+    - TODO learning objective 3
 prerequisites: |
   Before beginning this module, you should have:
-  - "Programming experience with languages such as Python, JavaScript, or C#."
-  - "Familiarity with RESTful APIs and webhooks."
-  - "Basic understanding of Azure services and cloud computing concepts."
+  - Programming experience with languages such as Python, JavaScript, or C#.
+  - Basic understanding of Azure services and cloud computing concepts.
 iconUrl: /learn/achievements/generic-badge.svg
 levels: 
-  - intermediate
+- intermediate
 roles: 
   - developer
 products: 
-- azure-ai-foundry
-- ai-services
+  - azure-managed-redis
 subjects: 
-  - artificial-intelligence
+  - data-integration
+  - cache
 units:
-- learn.wwl.develop-voice-live-agent.introduction
-- learn.wwl.develop-voice-live-agen.explore-azure-managed-redis
-- learn.wwl.develop-voice-live-agent.voice-live-sdk
-- learn.wwl.develop-voice-live-agent.exercise-develop-agent
-- learn.wwl.develop-voice-live-agen.module-assessment
-- learn.wwl.develop-voice-live-agent.summary
+- learn.wwl.integrate-apps-azure-managed-redis.introduction
+- learn.wwl.integrate-apps-azure-managed-redis.explore-azure-managed-redis
+- learn.wwl.integrate-apps-azure-managed-redis.client-libraries-best-practices
+- learn.wwl.integrate-apps-azure-managed-redis.exercise-develop-agent
+- learn.wwl.integrate-apps-azure-managed-redis.module-assessment
+- learn.wwl.integrate-apps-azure-managed-redis.summary
 badge:
-  uid: learn.wwl.develop-voice-live-agent.badge
+  uid: learn.wwl.integrate-apps-azure-managed-redis.badge
