renames/yml fixes

--- a/learn-PR/integrate-apps-azure-managed-redis/3-client-libraries-best-practices.yml
+++ b/learn-PR/integrate-apps-azure-managed-redis/3-client-libraries-best-practices.yml
@@ -3,7 +3,7 @@ uid: learn.wwl.integrate-apps-azure-managed-redis.client-libraries-best-practice
 title: Client libraries and development best practices
 metadata:
   title: Client Libraries and Development Best Practices
-  description: Explore the Voice Live SDK
+  description: Client libraries and development best practices
   ms.date: 11/28/2025
   author: jeffkoms
   ms.author: jeffko
